--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,17 +1,29 @@
 @import '~bootstrap/scss/bootstrap';
+@import 'cardShow';
 
-body{
+body {
     background-color: rgb(229, 222, 213);
 }
 
-.card {
-    transition: transform 0.3s ease-in-out;
-    cursor: pointer;
-}
+.reveal{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 0.8s all ease;
+  }
 
-.card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  .reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+.card {
+    cursor: pointer;
+
+    &:hover {
+        transform: scale(1.05);
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    }
 }
 
 
